# PhiloFax

./: CMakeLists.txt  README.md  font8x8.h  lwipopts.h  main.c  main.c_backup  rotenc.c  rotenc.h  screen.c  settings.c  settings.h  splash.c
Circuit/: README.md
Repeater/: SendUDPImage.py  Strowger.py  TC2.py  readme.md
SDCardContents/: Farnsworth.ini
camera/: CMakeLists.txt  camera.c  camera.c~  camera.h  camera.h~  camera.pio.h  format.c  ov7670.c
gc9a01/: gc9a01.c~  gc9a01.h  gc9a01.h~
graphcs/: PNGtoFarnsBitMap.py
graphics/: CMakeLists.txt  CMakeLists.txt~  FarnsNumbers.c  Farnsworth_b.c  Farnsworth_b2.c  Farnsworth_err.c  Farnsworth_wfb.c  graphics.c  graphics.c~  graphics.h  graphics.h~
graphics-src/: readme.md
sound/: farnsworthring.c  farnsworthtext.c  sound.c  sound.c~  sound.h  sound.h~
tones/: wav2byt.py
